update: calance-logo

--- a/dojo/templates/base.html
+++ b/dojo/templates/base.html
@@ -117,7 +117,7 @@
                         <a class="navbar-brand" href="{% url 'home' %}">
                         {% block header_logo %}
                             <div style="padding: 10px;">
-                                <img src="{% static "dojo/img/logo.png" %}" alt="DefectDojo Logo" width="240"/>
+                                <img src="{% static "dojo/img/logo1.png" %}" alt="DefectDojo Logo" width="360"/>
                             </div>
                         {% endblock %}
                         </a>
