--- a/dojo/templates/dojo/report_cover_page.html
+++ b/dojo/templates/dojo/report_cover_page.html
@@ -6,7 +6,7 @@
         <div class="page-cover-spacer">&nbsp;</div>
         <div class="text-center page-cover">
             <p>
-                <img src="{% static "dojo/img/logo.png" %}" alt="DefectDojo Logo" width="240"/>
+                <img src="{% static "dojo/img/logo1.png" %}" alt="DefectDojo Logo" width="360"/>
             </p>
 
             <h1>{{ report_title }}</h1>
